<resources>
    <string name="app_name">LearnMath</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="section_1_name">Section 1: Ratios &amp; Proportional Relationships</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_yet">Not Yet</string>

    <string name="title_activity_sections_view">SectionsView</string>
    <string name="title_activity_section_detail">SectionDetail</string>

    <string name="title_activity_practice">PracticeActivity</string>
    <string name="title_activity_practice_results">PracticeResults</string>
    <string name="practice_results_no_badges">No new badges unlocked.</string>
    <string name="practice_results_all_badges_prior">All badges have been unlocked for this
    section</string>
    <string name="practice_results_all_badges_unlocked">You unlocked all badges for this
        section\'s practice problems. Congratulations!</string>
    <string name="practice_results_two_badges_unlocked">You unlocked two new badges!</string>
    <string name="practice_results_one_badge_unlocked1">"You unlocked the "</string>
    <string name="practice_results_one_badge_unlocked2">" Badge!"</string>
    <string name="practice_badge1_name">Hard Worker Badge</string>
    <string name="practice_badge2_name">Quick Learner Badge</string>
    <string name="practice_badge3_name">Training Genius Badge</string>
    <string name="practice_results_retry_incorrect">Would you like to retry the practice questions you missed?</string>
    <string name="practice_results_retry_correct">Would you like to go over the practice
        questions again?</string>
    <string name="practice_results_retry_button_yes">Yes</string>
    <string name="practice_results_retry_button_no">No, return to section overview</string>
    <string name="practice_submit_button_text">Submit Answers</string>
    <string name="practice_retry_header">" Practice Review"</string>
    <string name="practice_retry_show">Show Answer</string>
    <string name="practice_retry_show2">Are you sure?</string>
    <string name="practice_retry_user_answer">"Your Answer: "</string>

    <string name="title_activity_progress_view">progressView</string>
    <string name="progress_study_stats">Study Stats</string>
    <string name="progress_study_time">"Time Spent Studying: "</string>
    <string name="progress_prob_tackled">"Problems Tackled: "</string>
    <string name="progress_prob_defeated">"Problems Defeated: "</string>
    <string name="progress_best_score">"Best Test Score: "</string>
    <string name="progress_last_score">"Last Test Score: "</string>
    <string name="progress_score_missing">No tests taken yet!</string>
    <string name="title_activity_section_completion">SectionCompletion</string>
    <string name="progress_practice_header">Practice</string>
    <string name="progress_test_header">Test Prep</string>
    <string name="progress_section_problems_answered">"Problems Answered: "</string>
    <string name="progress_section_problems_correct">"Problems Correct: "</string>
    <string name="progress_section_badges_unlocked">"Badges Unlocked: "</string>
    <string name="progress_fastest_time">"Fastest Test Completion Time: "</string>
    <string name="progress_review_time">"Average Test Review Time: "</string>
    <string name="progress_completion_time">"Average Test Completion Time: "</string>
    <string name="title_activity_badges_view">BadgesView</string>
    <string name="progress_section_button">Section Completion</string>
    <string name="progress_badges_button">Badges Unlocked</string>
    <string name="progress_return_button">Return to Menu</string>

    <string name="badges_header">Badge Collection</string>
    <string name="badges_information">Tap on a badge to see details.</string>

    <string name="back_button">Back</string>
    <string name="title_activity_test_prep">TestPrepActivity</string>
    <string name="title_activity_test_prep_prefs_view">TestPrepPrefsView</string>
    <string name="testprep_recommendation">"For the test prep section there are several recommendations: /nTry to complete the test with a time requirement."</string>
    <string name="testprep_start_button">Start Test</string>
    <string name="testprep_time_allowed">Time Allowed</string>
    <string name="testprep_recommended_text">(Recommended)</string>
    <string name="testprep_min">min</string>
    <string name="title_activity_test_results">TestResults</string>
    <string name="testprep_time_remaining">Time Remaining:</string>
    <string name="testprep_time_elapsed">Time Elapsed!</string>
    <string name="testprep_submit_test">Submit Test</string>
    <string name="testprep_share">Share My Score!</string>
    <string name="testprep_backtoMM">Back to Main Menu</string>
    <string name="testprep_results_header">Test Performance</string>
    <string name="testprep_score_intro">"You received a grade of ... "</string>
    <string name="results_new_best">New Best!</string>
    <string name="testprep_review_incorrect">Review Problems I Missed</string>
    <string name="testprep_button_review">Begin Review</string>
    <string name="testing_rev_dialog_msg">Would you like to begin reviewing your answers?</string>
    <string name="testing_rev_dialog_title">Enter Review Mode</string>
    <string name="testing_rev_btn_pressed">In Review Mode</string>
    <string name="testprep_time_spent">\"Time Spent: \"</string>
    <string name="testprep_timeinreview">\"Time In Review: \"</string>
    <string name="test_badge1_name">70% or Higher</string>
    <string name="test_badge2_name">80% or Higher</string>
    <string name="test_badge3_name">90% or Higher</string>
    <string name="test_badge4_name">Perfect Participant</string>
    <string name="test_badge5_name">Testing Master</string>
    <string name="test_badge6_name">Quick Study</string>
    <string name="title_activity_test_review">TestReview</string>
    <string name="test_review_header">" Test Review</string>
    <string name="test_review_missed">"Questions Missed: "</string>
    <string name="test_review_correct_answer">"Correct Answer: "</string>
    <string name="test_review_user_answer">"Answer Given: "</string>
    <string name="test_review_backtosection">Back to Section Details</string>
    <string name="title_activity_practice_retry">PracticeRetry</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="learn_next">Next Section</string>
    <string name="learn_jumpto">Jump to Section:</string>
    <string name="learn_escbtn">Esc</string>
    <string name="learn_esc_dialog_header">Exit</string>
    <string name="learn_esc_dialog_msg">Would you like to return to Section Information?</string>

    <string name="study_return_to_section_details">Return to Section Details</string>

</resources>
