<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.studio.jkt.com.learnmath.BadgesViewFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/badges_header"
        android:id="@+id/textViewHeader"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/badges_information"
        android:id="@+id/textViewInfo"
        android:layout_below="@+id/textViewHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewInfo"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tableLayoutBadgesCollection"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec1P1"
                android:background="@drawable/border"
                android:src="@drawable/practicebadgelocked1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec1P2"
                android:background="@drawable/border"
                android:src="@drawable/practicebadgelocked2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec1P3"
                android:background="@drawable/border"
                android:src="@drawable/practicebadgelocked3"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec2P1"
                android:background="@drawable/border"
                android:src="@drawable/testbadgelocked1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec2P2"
                android:background="@drawable/border"
                android:src="@drawable/testbadgelocked2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewSec2P3"
                android:background="@drawable/border"
                android:src="@drawable/testbadgelocked3"/>
        </TableRow>



    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/buttonReturn"
        android:layout_below="@+id/tableLayoutBadgesCollection"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
